[gd_scene load_steps=11 format=3 uid="uid://kjugmux01p8i"]

[ext_resource type="PackedScene" uid="uid://3kbesdvo0edx" path="res://Joshua/Vehicles/CarBody.tscn" id="1_bghju"]
[ext_resource type="Script" uid="uid://c4f5t57p1g1y6" path="res://Joshua/Scripts/Road Rage/road_rage_car.gd" id="1_vefwf"]
[ext_resource type="Script" uid="uid://cka36ls8h1ho8" path="res://Joshua/Scripts/Road Rage/road_rage_player.gd" id="2_y720f"]
[ext_resource type="Texture2D" uid="uid://dq400aku2efn5" path="res://Joshua/Road Rage/UI/ChatgptSpeedometerRoadJam.png" id="4_f22eo"]
[ext_resource type="Script" uid="uid://q065a3ikhwar" path="res://Joshua/Scripts/Road Rage/speed_stick.gd" id="5_utrii"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vefwf"]
size = Vector3(2, 3.25, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_0r146"]
size = Vector3(15, 15, 24.5)

[sub_resource type="ViewportTexture" id="ViewportTexture_5wy1f"]
viewport_path = NodePath("Mirrors/RearViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_f22eo"]
viewport_path = NodePath("Mirrors/LeftViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_utrii"]
viewport_path = NodePath("Mirrors/RightViewport")

[node name="CarBody" type="VehicleBody3D"]
script = ExtResource("1_vefwf")

[node name="Car2" parent="." instance=ExtResource("1_bghju")]
transform = Transform3D(0.12, 0, 0, 0, 0.12, 0, 0, 0, 0.12, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.64140546, 0.4806323)
shape = SubResource("BoxShape3D_vefwf")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.12, 0, 0, 0, 0.12, 0, 0, 0, 0.12, 0, -1, 0.5)
shape = SubResource("BoxShape3D_0r146")

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0, 0.7)
current = true
fov = 60.0
script = ExtResource("2_y720f")

[node name="Mirrors" type="Node3D" parent="."]

[node name="RearViewport" type="SubViewport" parent="Mirrors"]

[node name="MirrorCamera" type="Camera3D" parent="Mirrors/RearViewport"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 2)
fov = 60.0
far = 1000.0

[node name="RearMirror" type="Sprite3D" parent="Mirrors"]
transform = Transform3D(0.9659258, 0, -0.25881904, 0, 1, 0, 0.25881904, 0, 0.9659258, 0, 0.5293007, -0.06433749)
pixel_size = 0.0005
texture = SubResource("ViewportTexture_5wy1f")

[node name="RearCamMarker" type="Marker3D" parent="Mirrors"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 2)

[node name="LeftViewport" type="SubViewport" parent="Mirrors"]

[node name="MirrorCamera" type="Camera3D" parent="Mirrors/LeftViewport"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -1.2015221, 0, 1)
fov = 60.0
far = 1000.0

[node name="LeftMirror" type="Sprite3D" parent="Mirrors"]
transform = Transform3D(0.9659258, 0, 0.25881904, 0, 1, 0, -0.25881904, 0, 0.9659258, -1.0395381, 0, -0.1116641)
flip_h = true
pixel_size = 0.0004
texture = SubResource("ViewportTexture_f22eo")

[node name="LeftCamMarker" type="Marker3D" parent="Mirrors"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, -1.2, 0, 1)

[node name="RightViewport" type="SubViewport" parent="Mirrors"]

[node name="MirrorCamera" type="Camera3D" parent="Mirrors/RightViewport"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 1.1, 0, 1.2)
fov = 60.0
far = 1000.0

[node name="RightMirror" type="Sprite3D" parent="Mirrors"]
transform = Transform3D(0.9659258, 0, -0.25881904, 0, 1, 0, 0.25881904, 0, 0.9659258, 1.0483129, 0, -0.11826503)
flip_h = true
pixel_size = 0.0004
texture = SubResource("ViewportTexture_utrii")

[node name="RightCamMarker" type="Marker3D" parent="Mirrors"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 1.1, 0, 1.2)

[node name="LaneSwitchTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -743.0
offset_top = -607.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_f22eo")
expand_mode = 1

[node name="SpeedStick" type="ColorRect" parent="CanvasLayer/ColorRect/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.5
offset_top = 1.5
offset_right = 176.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
rotation = -3.7524579
color = Color(1, 0, 0.44313726, 1)
script = ExtResource("5_utrii")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="LaneSwitchTimer" to="." method="_on_lane_switch_timer_timeout"]
